[metadata]
name = catalogue-flask
author = Scott Wales
author-email = scott.wales@unimelb.edu.au
summary = catalogue-flask
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    catalogue_flask

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True

[extras]
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

